--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "perfect-freehand": "^1.2.0"
   }
 }
