--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.2",
     "postcss": "^8.4.31",
@@ -17,6 +18,7 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "perfect-freehand": "^1.2.0"
+    "perfect-freehand": "^1.2.0",
+    "uuid": "^9.0.1"
   }
 }
